# optimal_bins_1d

./: .gitignore  justfile  pyproject.toml
scripts/: profile.py
src/optimal_bins_1d/: __init__.py  linear.py  loglinear.py  quadratic.py  utils.py
tests/: test_1d_kmeans.py
